keep.xml added issue fixed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation files("libs/app-security-onlineDev-debug.aar")
+    //implementation files("libs/app-security-onlineDev-debug.aar")
+    implementation files("libs/app-security-onlineDev-release.aar")
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.guava:guava:31.0.1-android'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
